force-app/main/default/objects/Flow_Execution__c/fields/CPU__c.field-meta.xml
<CustomField>
    <fullName>CPU__c</fullName>
    <description>CPU time consumed by the Flow execution in milliseconds. Salesforce limit is 10,000ms for synchronous operations.</description>
    <inlineHelpText>CPU time used in milliseconds (limit: 10,000ms)</inlineHelpText>
    <label>CPU (ms)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>