force-app/main/default/objects/Flow_Execution__c/fields/DML__c.field-meta.xml
<CustomField>
    <fullName>DML__c</fullName>
    <description>Number of DML statements (insert, update, delete, upsert) executed by the Flow. Salesforce limit is 150 DML statements.</description>
    <inlineHelpText>Number of DML statements (limit: 150)</inlineHelpText>
    <label>DML</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>