force-app/main/default/objects/Flow_Execution__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>API name of the Flow that was executed. Used to identify which automation ran and track its performance over time.</description>
    <inlineHelpText>API name of the executed Flow</inlineHelpText>
    <label>Flow Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>