force-app/main/default/objects/Flow_Execution__c/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <description>Timestamp when the Flow execution started. Used to track execution history and identify patterns.</description>
    <inlineHelpText>When the Flow execution started</inlineHelpText>
    <label>Run Time</label>
    <type>DateTime</type>
</CustomField>