force-app/main/default/objects/Flow_Execution__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <description>Number of SOQL queries executed by the Flow. Salesforce limit is 100 queries for synchronous operations.</description>
    <inlineHelpText>Number of SOQL queries (limit: 100)</inlineHelpText>
    <label>SOQL</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>